--- a/CSS/one_page_website.css
+++ b/CSS/one_page_website.css
@@ -1,87 +1,145 @@
-html {
-    font-family: sans-serif;
-    font-size: 62.5%;
-    -webkit-tap-highlight-color: rgb(0, 0, 0);
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
+* {
+    box-sizing: border-box;
 }
 
-body {
-    font-size: 14px;
-    margin: 0;
-    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
-    line-height: 1.42857143;
-    color: #333;
-    background-image: url("../images/thumb/valorant_bg.jpg");
-    background-size: cover;
-}
-
-.header {
+h1 {
     padding: 5px;
     text-align: center;
     color: rgb(230, 72, 72);
-    font-size: 30px;
+    font-size: 50px;
     text-shadow: 5px 5px 10px rgb(241, 142, 9);
 }
 
-.wrap {
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
+    background-image: url("/images/thumb/valorant_bg.jpg");
 }
 
-.menu-container {
-    top: 110px;
-    left: 0;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    width: 100%;
+.row > .column {
+	padding: 0 8px;
 }
 
-.menu {
-    font: bold 12px/18px sans-serif;
-    text-align: center;
-    display: inline;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+.row:after {
+	content: "";
+	display: table;
+	clear: both;
 }
 
-.menu li {
-    color: #333;
-    display: inline-block;
-    margin-right: -2px;
-    position: relative;
-    padding: 12px 40px;
-    border: 1px solid rgb(14, 2, 4);
-    border-radius: 1.5px;
-    background-color: rgb(230, 72, 72);
-    cursor: pointer;
-    text-align: center;
+/*create four equal columns that floats next to each other*/
+.column {
+	float: left;
+	width: 25%;
 }
 
-.menu li:hover {
-    background-color: pink;
-    color: #fff
+/*The Modal (background)*/
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 100px;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: black;
 }
 
-img {
-    height: 600px;
-    width: 800px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 10px;
-    box-shadow: 2px 2px 4px rgb(241, 142, 9);
+/*Modal Content*/
+.modal-content {
+	position: relative;
+	background-color: #fefefe;
+	margin: auto;
+	padding: 0;
+	width: 90%;
+	max-width: 1200px;
 }
 
-p {
-    text-align: center;
-    font-size: 20px;
-    color: #333;
-    background-color: rgb(238, 228, 152);
+/*The close button*/
+.close {
+	color: whiite;
+	position: absolute;
+	top: 10px;
+	right: 25px;
+	font-size: 35px;
+	font-weight: bold;
 }
+
+.close:hover,
+.close:focus {
+	color: #999;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+/*hide the slides by default*/
+.mySlides {
+	display: none;
+}
+
+/*next and previous button*/
+.prev,
+.next {
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	padding: 16px;
+	margin-top: -50px;
+	color: white;
+	font-weight: bold;
+	font-size: 20px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
+	-webkit-user-select: none;
+}
+
+/*position the next button to the right*/
+.next {
+	right: 0;
+	border-radius: 3px 0 0 3px;
+}
+
+/*on hover, add a black background color with the little bit see-through*/
+.prev:hover,
+.next:hover {
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+/*numbertext (1/3 etc)*/
+.numbertext {
+	color: #f2f2f2;
+	font-size: 12px;
+	padding: 8px 12px;
+	position: absolute;
+	top: 0;
+}
+
+/*Caption Text*/
+.caption-container {
+	text-align: center;
+	background-color: black;
+	padding: 2px 16px;
+	color: white;
+}
+
+img.demo {
+	opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+	opacity: 1;
+}
+
+img.hover-shadow {
+	transition: 0.3s;
+}
+
+.hover-shadow:hover {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 
